express/blocks/quotes/quotes.css
main .quotes {
  margin: 40px auto 0 auto;
  padding-bottom: 40px;
  display: flex;
  flex-direction: column;
  gap: 16px;
}

main .quotes .quote {
  box-sizing: border-box;
  border-radius: 20px;
  margin: 0 auto;
  background-color: #FFF;
  padding: 32px;
  display: flex;
  flex-direction: column;
}

main .quotes .quote .content {
  padding-top: 28px;
  font-size: 1rem;
  text-align: left;
  flex-grow: 1;
}

main .quotes .quote .content::before {
  content: "“";
  display: block;
  position: absolute;
  margin-top: -50px;
  width: 36px;
  text-align: left;
  font-size: 72px;
  font-weight: 900;
}

main .quotes .quote .author {
  display: flex;
  flex-wrap: nowrap;
  margin-top: 16px;
  align-items: center;
  align-self: baseline;
}

main .quotes .quote .author hr {
  display: none;
}

main .quotes .quote .author .image {
  padding-right: 10px;
}

main .quotes .quote .author .image img {
  width: 42px;
  height: 42px;
  max-width: unset;
  border-radius: 21px;
  box-sizing: border-box;
}

main .quotes .quote .author .summary p {
  text-align: left;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.2;
}

main .section.quotes-container,
main .section.quotes-highlight-container,
main .section.quotes-dark-container {
  padding: 40px 0;
}

main .section.quotes-container {
  background: var(--color-white);
}

main .section.quotes-highlight-container {
  background: var(--gradient-highlight-vertical);
}

main .section.quotes-dark-container {
  background-color: var(--color-black);
}

main .section.quotes-inverted-container .quote {
  background-color: var(--color-black);
  color: var(--color-white);
}

main .section.quotes-container h2,
main .section.quotes-container h3,
main .section.quotes-container h4,
main .section.quotes-container h5 {
  color: var(--color-black);
}

main .section.quotes-highlight-container h2,
main .section.quotes-highlight-container h3,
main .section.quotes-highlight-container h4,
main .section.quotes-highlight-container h5,
main .section.quotes-dark-container h2,
main .section.quotes-dark-container h3,
main .section.quotes-dark-container h4,
main .section.quotes-dark-container h5 {
  color: var(--color-white);
}

main .section.quotes-container,
main .section.quotes-highlight-container,
main .section.quotes-dark-container {
  padding-top: 40px;
}

@media (min-width: 900px) {
  main .quotes-container > div,
  main .quotes-highlight-container > div,
  main .quotes-dark-container > div {
    max-width: 724px;
  }

  main .quotes {
    flex-direction: row;
    gap: 16px;
  }

  main .quotes .quote {
    flex: 1;
  }
}

@media (min-width: 1200px) {
  main .quotes-container > div,
  main .quotes-highlight-container > div,
  main .quotes-dark-container > div {
    max-width: 1024px;
  }
}

